--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 				<img src="image/icons/arrow.svg" alt="arrow">
 			</button>
 
-			<img class="show-photo" src="image/photo_cards/photo_gallery1.png" alt="photo">
-			<img class="hide-photo" src="image/photo_cards/photo_gallery2.png" alt="photo">
-			<img class="hide-photo" src="image/photo_cards/photo_gallery3.png" alt="photo">
-			<img class="hide-photo" src="image/photo_cards/photo_gallery4.png" alt="photo">
-			<img class="hide-photo" src="image/photo_cards/photo_gallery5.png" alt="photo">
-			<img class="hide-photo" src="image/photo_cards/photo_gallery6.png" alt="photo">
+			<img class="photo show-photo" src="image/photo_cards/photo_gallery1.png" alt="photo">
+			<img class="photo hide-photo" src="image/photo_cards/photo_gallery2.png" alt="photo">
+			<img class="photo hide-photo" src="image/photo_cards/photo_gallery3.png" alt="photo">
+			<img class="photo hide-photo" src="image/photo_cards/photo_gallery4.png" alt="photo">
+			<img class="photo hide-photo" src="image/photo_cards/photo_gallery5.png" alt="photo">
+			<img class="photo hide-photo" src="image/photo_cards/photo_gallery6.png" alt="photo">
 
 			<button class="scnd_btn">
 				<img src="image/icons/arrow.svg" alt="arrow">
@@ -26,14 +26,15 @@
 			</div>
 
 			<div class="carousel">
-				<div class="color-circle"></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
+				<div class="circle"></div>
+				<div class="circle"></div>
+				<div class="circle"></div>
+				<div class="circle"></div>
+				<div class="circle"></div>
+				<div class="circle"></div>
 			</div>
 		</div>
 	</main>
+	<script src="script/index.js"></script>
 </body>
 </html>
